# cool-pico-work

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Dockerfile  Embed.toml  Makefile  README.md  build.rs  build.sh  c_build.sh  docker-compose.yml  flake.nix  hello.c  install-deps.sh  jartis.c  jartis.h  memory.x  openocd.gdb  pico_setup.sh  run-docker.sh  run-minicom  run-minicom.sh  run-openocd.sh  rust-toolchain  setup-pico.sh  shell.nix  tasks.sh
.cargo/: config.toml
.devcontainer/: devcontainer-dockerfile.json  devcontainer.json  docker-compose.yml
cyw43-firmware/: README.md
interrupts/: Cargo.toml
interrupts/src/: _vectors.rs  lib.rs
jartis/: Cargo.toml
jartis/src/: i2c.rs  jartis.c  jartis.h  lib.rs  main_old.rs  piicodev_ssd1306.rs  piicodev_unified.rs  uart.rs
jartis/src/piicodev_bme280/: mod.rs  reading.rs
jartis/src/piicodev_buzzer/: piicodev_buzzer.rs
jartis/src/piicodev_qmc6310/: constants.rs  reading.rs
jartis/src/piicodev_rfid/: constants.rs  mod.rs  rfid.rs  types.rs
jartis/src/piicodev_rgb/: mod.rs
jartis/src/piicodev_vl53l1x/: constants.rs
jartis/src/servo/: mod.rs
jartis/src/time/: driver.rs
src/: byte_reader.rs  main.rs  piicodev_bme280.rs  piicodev_buzzer.rs  piicodev_rgb.rs  piicodev_rgb_old.rs  piicodev_ssd1306.rs  piicodev_unified.rs  rfid_flasher.rs  utils.rs
src/gspi/: gspi.rs  mod.rs
src/piicodev_bme280/: mod.rs  piicodev_bme280.rs  reading.rs
src/piicodev_buzzer/: mod.rs  notes.rs  piicodev_buzzer.rs
src/piicodev_qmc6310/: mod.rs
src/piicodev_vl53l1x/: constants.rs  mod.rs  piicodev_vl53l1x.rs  piicodev_vl53l1x_old.rs
src/pins/: pins.rs
src/rfid_flasher/: README.md  mod.rs  rfid_flasher.rs  state.rs
src/time/: driver.rs
udev/rules.d/: 60-openocd.rules
