[package]
edition = "2021"
name = "cool-pico-work"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = { version = "0.7.3", features = [] }
embedded-hal = { version = "1.0.0-rc.1" }

defmt = "0.3.5"
defmt-rtt = "0.4"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }

# We're using a Pico by default on this template
rp-pico = "0.8.0"

# For unit conversions
fugit = "0.3.6"

# For mathematics
libm = "0.2.6"
cyw43 = { git = "https://github.com/alecbass/embassy.git", branch = "remove-boot2-writing", features = [
    "defmt",
    "firmware-logs",
] }
cyw43-pio = { git = "https://github.com/alecbass/embassy.git", branch = "remove-boot2-writing", features = [
    "defmt",
    "overclock",
] }
embassy-executor = { version = "0.3.0", features = [
    "nightly",
    "integrated-timers",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-futures = "0.1.0"
embassy-net = { version = "0.1.0", git = "https://github.com/alecbass/embassy.git", branch = "remove-boot2-writing", features = [
    "defmt",
    "nightly",
    "tcp",
    "udp",
    "dhcpv4",
    "medium-ethernet",
] }

embassy-rp = { version = "0.1.0", git = "https://github.com/alecbass/embassy.git", branch = "remove-boot2-writing", features = [
    "defmt",
    "unstable-traits",
    "nightly",
    "unstable-pac",
    "time-driver",
    # "critical-section-impl",
] }

embassy-time = { version = "0.1.3", git = "https://github.com/alecbass/embassy.git", branch = "remove-boot2-writing", features = [
    "nightly",
    "unstable-traits",
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-sync = { version = "0.2.0" }
static_cell = { version = "1.2.0", features = ["nightly"] }
critical-section = "1.1.2"
atomic-polyfill = "1.0.3"
embedded-hal-bus = "0.1.0-rc.1"
embedded-hal-1 = { version = "0.2.7", package = "embedded-hal" }
embedded-io-async = "0.5.0"
reqwless = "0.5.0"

[patch.crates-io]
rp2040-pac = { git = "https://github.com/alecbass/rp2040-pac.git", branch = "remove-interrupts" }
# embedded-io-async = { version = "0.5.0", optional = true }

# but you can use any BSP. Uncomment this to use the pro_micro_rp2040 BSP instead
# sparkfun-pro-micro-rp2040 = "0.3"

# If you're not going to use a Board Support Package you'll need these:
# rp2040-hal = { version="0.6", features=["rt"] }
# rp2040-boot2 = "0.2"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
