[package]
name = "jartis"
version = "0.1.0"
edition = "2021"

crate-type = "lib"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"

embedded-hal = { version = "1.0.0" }
embedded-hal-nb = { version = "1.0.0" }

defmt = "0.3.5"
defmt-rtt = "0.4"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }

# We're using a Pico by default on this template
rp-pico = { version = "0.9.0", features = ["boot2", "rt", "critical-section-impl", "rom-func-cache", "disable-intrinsics"] } # disable-intrinsics results in undefined symbols

# For unit conversions
fugit = "0.3.7"

# For mathematics
libm = "0.2.8"

# For OLED display
embedded-graphics = "0.8.1"
ssd1306 = "0.8.4"

critical-section = "1.1.2"

[patch.crates-io]
# rp2040-pac = { git = "https://github.com/alecbass/rp2040-pac.git", branch = "remove-interrupts" }
# embedded-io-async = { version = "0.5.0", optional = true }

# but you can use any BSP. Uncomment this to use the pro_micro_rp2040 BSP instead
# sparkfun-pro-micro-rp2040 = "0.3"

# If you're not going to use a Board Support Package you'll need these:
# rp2040-hal = { version="0.6", features=["rt"] }
# rp2040-boot2 = "0.2"
# cortex-m = { path = "./cortex-m/cortex-m" }
# cortex-m-rt = { path = "./cortex-m/cortex-m-rt" }

